Fix too big aligment on .trending

--- a/style.css
+++ b/style.css
@@ -180,13 +180,12 @@ header {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    display: grid;
-    grid-template-rows: repeat(5);
 }
 
 .trending {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
+    gap: 15px;
     align-items: center;
     margin-top: 15px;
 }
@@ -198,11 +197,6 @@ header {
 }
 .trending, .announcements {
     font-size: 12px;
-}
-
-.trending {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
 }
 
 .trending .img-placeholder {
